# Note: This crate must be built using do.sh

[package]
name = "deltafi-swap"
version = "1.0.0"
description = "Deltafi token swap program"
authors = ["Solana Maintainers <maintainers@deltafi.ai>"]
repository = "https://github.com/delta-fi/deltafi-contracts"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []
fuzz = ["arbitrary", "roots"]

[dependencies]
arrayref = "0.3.6"
bytemuck = "1.7.2"
bitflags = "1.3"
num-derive = "0.3"
num-traits = "0.2"
safe-transmute = "0.11.0"
solana-program = "1.8.5"
spl-token = { version = "3.2", features = ["no-entrypoint"] }
thiserror = "1.0"
uint = "0.9"
arbitrary = { version = "1.0", features = ["derive"], optional = true }
roots = { version = "0.0.7", optional = true }
num = "0.4.0"
serum_dex = { git = "https://github.com/project-serum/serum-dex", tag = "v0.5.5", features = [ "no-entrypoint" ] }

[dev-dependencies]
assert_matches = "1.5.0"
enumflags2 = "0.6.4"
log = "0.4"
proptest = "1.0"
rand = "0.8.0"
solana-program-test = "1.8.5"
solana-sdk = "1.8.5"
serde = "1.0"
serde_yaml = "0.8"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
